--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -29,11 +29,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  list_tile_switch: ^0.0.2
   cupertino_icons: ^1.0.2
+  flutter_icons: ^1.1.0
+  backdrop: ^0.4.7
+  carousel_pro: ^1.0.0
+  flutter_swiper: ^1.1.6
+  image_picker: ^0.7.4
+  firebase_auth: ^1.4.1
+  firebase_core: ^1.6.0
+  google_sign_in: ^5.0.7
+  cloud_firestore: ^2.5.1
+  firebase_storage: ^8.1.0
+  provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
@@ -51,23 +59,37 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/emptycart.png
+    - assets/images/carousel1.png
+    - assets/images/carousel2.jpeg
+    - assets/images/carousel3.jpg
+    - assets/images/carousel4.png
+    - assets/images/addidas.jpg
+    - assets/images/apple.jpg
+    - assets/images/dell.jpg
+    - assets/images/h&m.jpg
+    - assets/images/nike.jpg
+    - assets/images/samsung.jpg
+    - assets/images/huawei.jpg
+    - assets/images/CatBeauty.jpg
+    - assets/images/CatClothes.jpg
+    - assets/images/CatFurniture.jpg
+    - assets/images/CatLaptops.png
+    - assets/images/CatPhones.png
+    - assets/images/CatShoes.jpg
+    - assets/images/CatWatches.jpg
+    - assets/images/empty-wishlist.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
