--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^2.5.1
   firebase_storage: ^8.1.0
   provider: ^4.3.3
+  flutter_staggered_grid_view: ^0.4.0
+  badges: ^2.0.1
 
 dev_dependencies:
   flutter_test:
