--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^4.3.3
   flutter_staggered_grid_view: ^0.4.0
   badges: ^2.0.1
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
